Closed Bug 911954 Opened 12 years ago Closed 12 years ago

Missing forward declaration in TraceLogging.h

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: yaron.tausky, Assigned: yaron.tausky)

Details

Attachments

(1 file, 1 obsolete file)

When building the shell with --enable-trace-logging, TraceLogging.cpp fails to build because JSScript is not declared in TraceLogging.h.
Attached patch add_forward_declaration.patch (obsolete) — Splinter Review
With this change it builds again.
Attachment #798788 - Flags: review?(hv1989)
Comment on attachment 798788 [details] [diff] [review] add_forward_declaration.patch Review of attachment 798788 [details] [diff] [review]: ----------------------------------------------------------------- Looks like :njn removed that forward declaration in http://hg.mozilla.org/integration/mozilla-inbound/rev/9e98958b5e50. Just confirmed on irc and we should use |#include "js/TypeDecls.h"| now. It will be forward declared in there. Could you create a patch using that? Thanks!
Attachment #798788 - Flags: review?(hv1989)
Sure, there.
Attachment #799338 - Flags: review?(hv1989)
Attachment #799338 - Flags: review?(hv1989) → review+
Attachment #798788 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Assignee: general → yaron.tausky
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: