Bug 911954 - Add forward declaration of JSScript to TraceLogging.h, r=h4writer